Included more commands

--- a/PetShop.Domain.Application/PetShop.Domain.Application.csproj
+++ b/PetShop.Domain.Application/PetShop.Domain.Application.csproj
@@ -5,12 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Handlers\Pet\" />
-    <Folder Include="PetHandlers\DataObjects\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
