--- a/PetShop.Api.Pet/appsettings.json
+++ b/PetShop.Api.Pet/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PetShopConnection": "Data Source=localhost;Initial Catalog=PetShopDB;User ID=sa;Password=YourStrong@Passw0rd;Pooling=False"
-  }
+  },
+  "Secret": "6d44c8e5-3361-4cf3-8f5f-d65d5abd4ad6"
 }
