--- a/PetShop.Api.Pet/appsettings.json
+++ b/PetShop.Api.Pet/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PetShopConnection": "Data Source=localhost;Initial Catalog=PetShopDB;User ID=sa;Password=YourStrong@Passw0rd;Pooling=False"
+    "PetShopConnection": "Data Source=localhost;Initial Catalog=PetShopDB;User ID=sa;Password=YourStrong@Passw0rd;Pooling=False",
+    "IdentityConnection": "Data Source=localhost;Initial Catalog=IdentityDB;User ID=sa;Password=YourStrong@Passw0rd;Pooling=False"
   },
   "Secret": "6d44c8e5-3361-4cf3-8f5f-d65d5abd4ad6"
 }
