--- a/PetShop.Web.UI/appsettings.json
+++ b/PetShop.Web.UI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "IdentityConnection": "Data Source=localhost;Initial Catalog=IdentityDB;User ID=sa;Password=YourStrong@Passw0rd;Pooling=False",
+    "PetShopConnection": "Data Source=localhost;Initial Catalog=PetShopDB;User ID=sa;Password=YourStrong@Passw0rd;Pooling=False;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
